add function check unregistered students